<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@drawable/bg_ourculture">

    <ImageView
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:src="@drawable/logo_with_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="50dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/tiPwd"
        app:layout_constraintStart_toStartOf="@id/tiPwd"
        app:layout_constraintEnd_toEndOf="@id/tiPwd"
        android:layout_marginBottom="16dp"
        app:startIconDrawable="@drawable/mail">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tiPwd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btnLogin"
        app:layout_constraintStart_toStartOf="@+id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:layout_marginBottom="16dp"
        app:startIconDrawable="@drawable/lock">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/btnSignInGoogle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAllCaps="false"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/btnSignInGoogle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/lin_layout_tvsignup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/black"
        android:text="@string/sign_in_with_google"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:drawableLeft="@drawable/search"
        android:backgroundTint="@color/white"/>

    <LinearLayout
        android:id="@+id/lin_layout_tvsignup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal"
        android:layout_marginBottom="60dp">

        <TextView
            android:id="@+id/tv_didnt_have_acc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginStart="8dp"
            android:text="@string/create_an_account"
            android:textColor="@color/black"
            android:layout_marginEnd="2dp"/>

        <TextView
            android:id="@+id/tv_sign_up_here"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/sign_up_here"
            android:textColor="@color/my_light_primary"
            android:textStyle="bold"
            android:layout_marginStart="2dp"/>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        tools:visibility="visible"/>

</androidx.constraintlayout.widget.ConstraintLayout>