<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detection.DetectionActivity">

    <ImageView
        android:id="@+id/iv_detect_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/baseline_image_24"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <Button
        android:id="@+id/btn_galery"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/guidelineHorizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/pilih_dari_galeri"
        android:layout_marginTop="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"/>

    <Button
        android:id="@+id/btn_camera"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_galery"
        app:layout_constraintStart_toStartOf="@+id/btn_galery"
        app:layout_constraintEnd_toEndOf="@+id/btn_galery"
        android:text="@string/ambil_dari_kamera"/>

    <Button
        android:id="@+id/btn_detection"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/btn_camera"
        app:layout_constraintStart_toStartOf="@+id/btn_camera"
        app:layout_constraintEnd_toEndOf="@+id/btn_camera"
        android:layout_marginTop="20dp"
        android:text="@string/deteksi_gambar"/>

</androidx.constraintlayout.widget.ConstraintLayout>