<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailCultureActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.detail.DetailCultureActivity">

        <ImageView
            android:id="@+id/iv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="250dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@drawable/ic_launcher_background"
            android:scaleType="centerCrop"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Topeng"
            app:layout_constraintTop_toBottomOf="@id/iv_detail_photo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Rp10.000"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            app:layout_constraintStart_toStartOf="@id/tv_title"
            app:layout_constraintEnd_toEndOf="@id/tv_title"
            android:textSize="18sp"
            android:textColor="@color/my_light_primary"/>

        <TextView
            android:id="@+id/tv_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Deskripsi"
            app:layout_constraintTop_toBottomOf="@id/tv_price"
            app:layout_constraintStart_toStartOf="@id/tv_price"
            app:layout_constraintEnd_toEndOf="@id/tv_price"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            app:layout_constraintTop_toBottomOf="@id/tv_description_text"
            app:layout_constraintStart_toStartOf="@id/tv_description_text"
            app:layout_constraintEnd_toEndOf="@id/tv_description_text"
            android:textSize="18sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/btn_add_wishlist"
            android:layout_width="0dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="@+id/tv_description"
            app:layout_constraintEnd_toEndOf="@+id/tv_description"
            android:layout_marginTop="16dp"
            android:text="@string/add_to_wishlist"/>

        <TextView
            android:id="@+id/comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/comment"
            app:layout_constraintTop_toBottomOf="@+id/btn_add_wishlist"
            app:layout_constraintStart_toStartOf="@id/btn_add_wishlist"
            app:layout_constraintEnd_toEndOf="@id/btn_add_wishlist"
            android:textColor="@color/black"
            android:textSize="18sp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profile_image_detail"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintTop_toBottomOf="@id/comment"
            app:layout_constraintStart_toStartOf="@id/comment"
            android:layout_marginTop="12dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_add_comment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/profile_image_detail"
            app:layout_constraintEnd_toEndOf="@+id/btn_add_wishlist"
            app:layout_constraintTop_toTopOf="@id/profile_image_detail">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_add_comment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/add_comment"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_itemComment"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/ti_add_comment"
            app:layout_constraintStart_toStartOf="@+id/profile_image_detail"
            app:layout_constraintEnd_toEndOf="@id/ti_add_comment"
            tools:listitem="@layout/item_comment"/>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/btn_add_wishlist"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            tools:visibility="visible"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>